@@ -1,3 +1,8 @@
+2004-03-21  Richard Henderson  <rth@redhat.com>
+
+	* readelf.c (display_debug_frames): Don't crash for mismatched
+	DW_CFA_restore_state.
+
 2004-03-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* Makefile.am: Run "make dep-am".
